--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Websites for Central Illinois Businesses | Build Online</title>
+    <title>Websites for Central Illinois Businesses | Build Online</title>\<script async src="https://cdn.splitbee.io/sb.js"></script>
+    <script async src="https://cdn.splitbee.io/sb.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.2/tailwind.min.css">
-    
 </head>
 <body>
 
