--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Websites for Central Illinois Businesses | Build Online</title>\<script async src="https://cdn.splitbee.io/sb.js"></script>
     <script async src="https://cdn.splitbee.io/sb.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.2/tailwind.min.css">
-</head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 <body>
 
 <!-- Section 1 -->
