--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Websites for Central Illinois Businesses | Build Online</title>
+    <meta content="https://uploads-ssl.webflow.com/620bb708ef6a6777d5762b14/620c3b700b46b9ce0bf9a15c_opengraph.png" property="og:image">
+    <meta content="https://uploads-ssl.webflow.com/620bb708ef6a6777d5762b14/620c3b700b46b9ce0bf9a15c_opengraph.png" property="twitter:image">
     <script async src="https://cdn.splitbee.io/sb.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.2/tailwind.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
